# ogiri-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
PROMPTS/: 00_answer.md  01_programming.md  02_science_student.md  03_circle.md  04_university.md  05_daily.md  06_others.md  07_uecmma.md
scripts/: list_gemini_models.py
src/: bot.py  check_models.py  database.py  gemini_client.py  send_topic.py
systemd/: ogiri-bot.service  ogiri-bot.timer
